--- a/lab5/index.html
+++ b/lab5/index.html
@@ -42,19 +42,20 @@
                 }
 
                 function spawnObstacle(a) {
-                    if (a > 5)
-                        return;
-                    obstaclesY.push(0);
-                    obstaclesX.push(Math.random() * canvas.clientWidth);
-                    setInterval(()=>{
+                    console.log(a);
+                    if (a < 5) {
+                        obstaclesY.push(0);
+                        obstaclesX.push(Math.random() * canvas.clientWidth);
+                        setTimeout(()=>{
                         spawnObstacle(a + 1);
-                    }, 3_000);
+                        }, 3_000);
+                    }
                 }
 
                 function drawObstacles() {
                     for (var i = 0; i < obstaclesX.length; ++i) {
                         ctx.fillStyle = "black";
-                        ctx.fillRect(obstaclesX, obstaclesY, 100, 10);
+                        ctx.fillRect(obstaclesX[i], obstaclesY[i], 100, 10);
                         obstaclesY[i] += 1;
                     }
                     requestAnimationFrame(()=>{
