Working with collisions

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -71,6 +71,14 @@
                 function detectCollisions()
                 {
                     for (var i = 0; i < obstaclesX.length; ++i) {
+                        if (!(playerPositionX < (obstaclesX[i] + obstacle_width) &&
+                          (playerPositionX + car_width) > obstaclesY[i] &&
+                          (playerPositionY < obstaclesY[i] && 
+                          (playerPositionY + car_height) > obstaclesY[i]))) {
+                            console.log("foo")
+                            points = 0;
+                          }
+
                     }
                 }
 
