--- a/lab6/index.html
+++ b/lab6/index.html
@@ -79,19 +79,15 @@
 
                 function die() {
                     print_game_over();
-                    console.log("you died");
                     setTimeout(()=>{
-
                     }, 3000);
                 }
 
-                function detectCollisions()
+                function detectCollisions(num)
                 {
-                    for (var i = 0; i < obstaclesX.length; ++i) {
-                        if ((playerPositionX > obstaclesX[i] && playerPositionX + car_width < obstaclesY[i] + obstacle_width) &&
-                        (playerPositionY < obstaclesY[i] && playerPositionY + car_height > obstaclesY[i])) {
-                            die();
-                        }
+                    if ((playerPositionX > obstaclesX[num] && (playerPositionX + car_width) < (obstaclesX[num] + obstacle_width)) &&
+                    (playerPositionY < obstaclesY[num] && (playerPositionY + car_height) > obstaclesY[num])) {
+                        die();
                     }
                 }
 
@@ -110,7 +106,9 @@
                             obstaclesX[i] = random_in_range(road_pos, road_pos + road_width - obstacle_width);
                             pointed[i] = false;
                         }
+                        detectCollisions(i);
                     }
+                    detectCollisions();
                     requestAnimationFrame(()=>{
                         drawObstacles();
                     });
@@ -163,7 +161,7 @@
 
                 spawnObstacle(0);
                 requestAnimationFrame(() => {
-                    detectCollisions();
+                    
                     drawRoad(road_pos, road_width, ctx);
                     drawCenterLine(line_width, ctx);
                     drawCornerLines(line_width, ctx);
