moving is not working when player is dead

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -140,6 +140,7 @@
 
                 document.addEventListener('keydown', (event)=> {
                     if (event.defaultPrevented) { return; }
+                    if (dead) return;
                     switch (event.key) {
                         case "ArrowLeft":
                             if (playerPositionX - car_width > 0) {
